syntax = "proto3";

option go_package = "genproto/voting/";

package voting;

import "election.proto";


service PublicVoteService{
    rpc Create(CreatePublicVoteReq) returns(Void){}
    rpc GetById(ById) returns(GetPublicVoteRes){}
    rpc GetAll(Filter) returns(GetAllPublicVoteRes){}
    rpc Update(GetPublicVoteRes) returns(Void){}
    rpc Delete(ById) returns(Void){}
    rpc GetVote(ById) returns(GetVoteById){}
    rpc GetVotes(Filter) returns(GetAllVotes){}
}

message CreatePublicVoteReq{
    string election_id = 1;
    string public_id = 2;
    string candidate_id = 3;
}


message GetPublicVoteRes{
    string id = 1;
    string election_id = 2;
    string public_id = 3;
    string candidate_id = 4;
}

message GetVoteById{
    string candidate_id = 1;
    int32 count = 2;
}
message GetAllVotes{
    repeated GetVoteById votes = 1;
}

message GetAllPublicVoteRes{
    repeated GetPublicVoteRes PublicVotes = 1;
}